crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__ctrl_stmt.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Ctrl(
            Break,
        ),
        Ctrl(
            Continue,
        ),
        Ctrl(
            Return(
                Some(
                    GetVar(
                        GetVar {
                            name: "v",
                        },
                    ),
                ),
            ),
        ),
        Ctrl(
            Yield(
                GetVar(
                    GetVar {
                        name: "v",
                    },
                ),
            ),
        ),
    ],
}
