crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__func_stmt-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: expected `identifier` while parsing function name
[34m>[0m code:1
[34m|[0m 
[34m|[0m fn[31;4m([0m):
[34m|[0m 


