crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__if_stmt-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        body: [
                            If(
                                If {
                                    branches: [
                                        Branch {
                                            cond: GetVar(
                                                GetVar {
                                                    name: "b",
                                                },
                                            ),
                                            body: [
                                                Pass,
                                            ],
                                        },
                                    ],
                                    default: None,
                                },
                            ),
                        ],
                    },
                ],
                default: None,
            },
        ),
    ],
}
